@@ -1,6 +1,9 @@
 Changes between 1.4.0 and 1.4.1
 ==================================================
 
+- fix (pytest-) issue10 and refine assertion reinterpretation
+  to avoid breaking if the __nonzero__ of an object fails
+
 - fix (pytest-) issue17 where python3 does not like "import *"
   leading to misrepresentation of import-errors in test modules
 
